--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -11,11 +11,10 @@
         android:id="@+id/findIngsET"
         android:layout_gravity="center_horizontal" />
 
-    <ListView
-        android:layout_width="match_parent"
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/findedIngsListView"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/grey"/>
+        android:id="@+id/findedIngsRecyclerView"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
