--- a/app/src/main/res/layout/card_available_reciepe.xml
+++ b/app/src/main/res/layout/card_available_reciepe.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="130dp"
     android:layout_margin="5dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -14,41 +14,92 @@
         android:layout_height="wrap_content"
         android:id="@+id/Rel">
 
-        <ImageView
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/relativeLayout">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/avlRcpImageView"
+                android:src="@drawable/tetet"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_above="@+id/availableReciepesLW"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/avlRcpImageView"
+            android:layout_below="@+id/relativeLayout">
 
-            android:layout_alignParentTop="true"
-            android:src="@drawable/moy" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/avlRcpNameTV"
+                android:gravity="left"
+                android:textSize="20dp"
+                android:text="Пицца"
+                android:visibility="visible"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="14dp"
+                android:layout_marginStart="14dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/avlRcpNameTW"
-            android:paddingLeft="12dp"
-            android:paddingTop="20dp"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="left"
-            android:textSize="20dp"
-            android:paddingBottom="15dp"
-            android:text="Name"
-            android:layout_marginLeft="49dp"
-            android:layout_marginStart="49dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/numOfIngs"
+                android:layout_alignTop="@+id/view"
+                android:layout_below="@+id/avlRcpNameTV"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="time"
-            android:id="@+id/timeTW"
-            android:layout_marginRight="55dp"
-            android:layout_marginEnd="55dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+                android:layout_centerHorizontal="true" />
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:id="@+id/view"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="false"
+                 />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/timeTV"
+                android:layout_alignTop="@+id/view"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                 />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/numberOfStepsTV"
+                android:layout_alignTop="@+id/view"
+                android:layout_alignLeft="@+id/avlRcpNameTV"
+                android:layout_alignStart="@+id/avlRcpNameTV" />
+
+        </RelativeLayout>
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
